Deploying Micro Service Registry to Jenkins

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ eureka:
     service-url:
       #defaultZone: http://localhost:6060/eureka
       defaultZone: http://63.250.55.150:6060/eureka
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
 
     #instance:
     #hostname: localhost
